# cwebsocket

./: .cproject  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Makefile.am  README.md  autogen.sh  codecov.yml  configure.ac  docker-compose.test.yml  websocket-testsuite
.github/workflows/: ci.yml  release.yml
Debug/: makefile
Debug/src/: subdir.mk
RPI Debug/: makefile  objects.mk  sources.mk  subdir.mk
RPI Debug/src/: subdir.mk
RPI Debug/src/cwebsocket/: subdir.mk
RPI Debug/src/cwebsocket/subprotocol/echo/: subdir.mk
autobahn-reports/clients/: cwebsocket_1_0_case_10_1_1.html  cwebsocket_1_0_case_10_1_1.json  cwebsocket_1_0_case_12_1_1.html  cwebsocket_1_0_case_12_1_1.json  cwebsocket_1_0_case_12_1_10.html  cwebsocket_1_0_case_12_1_10.json  cwebsocket_1_0_case_12_1_11.html  cwebsocket_1_0_case_12_1_11.json  cwebsocket_1_0_case_12_1_12.html  cwebsocket_1_0_case_12_1_12.json  cwebsocket_1_0_case_12_1_13.html  cwebsocket_1_0_case_12_1_13.json  cwebsocket_1_0_case_12_1_14.html  cwebsocket_1_0_case_12_1_14.json  cwebsocket_1_0_case_12_1_15.html  cwebsocket_1_0_case_12_1_15.json  cwebsocket_1_0_case_12_1_16.html  cwebsocket_1_0_case_12_1_16.json  cwebsocket_1_0_case_12_1_17.html  cwebsocket_1_0_case_12_1_17.json  cwebsocket_1_0_case_12_1_18.html  cwebsocket_1_0_case_12_1_18.json  cwebsocket_1_0_case_12_1_2.html  cwebsocket_1_0_case_12_1_2.json  cwebsocket_1_0_case_12_1_3.html  cwebsocket_1_0_case_12_1_3.json  cwebsocket_1_0_case_12_1_4.html  cwebsocket_1_0_case_12_1_4.json  cwebsocket_1_0_case_12_1_5.html  cwebsocket_1_0_case_12_1_5.json  cwebsocket_1_0_case_12_1_6.html  cwebsocket_1_0_case_12_1_6.json  cwebsocket_1_0_case_12_1_7.html  cwebsocket_1_0_case_12_1_7.json  cwebsocket_1_0_case_12_1_8.html  cwebsocket_1_0_case_12_1_8.json  cwebsocket_1_0_case_12_1_9.html  cwebsocket_1_0_case_12_1_9.json  cwebsocket_1_0_case_12_2_1.html  cwebsocket_1_0_case_12_2_1.json  (+996 more)
scripts/: autobahn-down.sh  autobahn-test-client.sh  autobahn-up.sh  coverage.sh  pre-commit-simple.sh  run-integration.sh  setup-pre-commit.sh
src/: client.c  client.h  cwebsocket.c  cwebsocket.h  main.c  mqtt-client.c  server.c  stomp-client.c  tests-unit.c  utf8.h  websocket-client.c  websocket-server.c  websocket-testsuite.c
src/cwebsocket/: client.c  client.h  client_internal.h  common.c  common.h  logging.c  logging.h  server.c  server.h  utf8.c  utf8.h
src/cwebsocket/subprotocol/: echo_client.c  echo_client.h  echo_server.c  echo_server.h  syslog_client.c  syslog_client.h  syslog_server.c  syslog_server.h  syslog_subprotocol.c  syslog_subprotocol.h
src/cwebsocket/subprotocol/echo/: echo_client.c  echo_client.gcno  echo_client.h  echo_server.c
src/cwebsocket/subprotocol/mqtt/: mqtt_client.c  mqtt_client.h  mqtt_client_persistence_integrated.h  mqtt_packet_id_pool.c  mqtt_persistence.c  mqtt_persistence.h  mqtt_scram.c  mqtt_scram.h
src/cwebsocket/subprotocol/stomp/: stomp_client.c  stomp_client.h
src/websocket/: cwebsocket_client.c  utf8.c  utf8.h
test/: logging-test.c  utf8-overlong-security-test.c
test/autobahn/: fuzzingserver.json
test/autobahn/reports/client/: cwebsocket_0_1a_case_10_1_1.html  cwebsocket_0_1a_case_10_1_1.json  cwebsocket_0_1a_case_12_1_1.html  cwebsocket_0_1a_case_12_1_1.json  cwebsocket_0_1a_case_12_1_10.html  cwebsocket_0_1a_case_12_1_10.json  cwebsocket_0_1a_case_12_1_11.html  cwebsocket_0_1a_case_12_1_11.json  cwebsocket_0_1a_case_12_1_12.html  cwebsocket_0_1a_case_12_1_12.json  cwebsocket_0_1a_case_12_1_13.html  cwebsocket_0_1a_case_12_1_13.json  cwebsocket_0_1a_case_12_1_14.html  cwebsocket_0_1a_case_12_1_14.json  cwebsocket_0_1a_case_12_1_15.html  cwebsocket_0_1a_case_12_1_15.json  cwebsocket_0_1a_case_12_1_16.html  cwebsocket_0_1a_case_12_1_16.json  cwebsocket_0_1a_case_12_1_17.html  cwebsocket_0_1a_case_12_1_17.json  cwebsocket_0_1a_case_12_1_18.html  cwebsocket_0_1a_case_12_1_18.json  cwebsocket_0_1a_case_12_1_2.html  cwebsocket_0_1a_case_12_1_2.json  cwebsocket_0_1a_case_12_1_3.html  cwebsocket_0_1a_case_12_1_3.json  cwebsocket_0_1a_case_12_1_4.html  cwebsocket_0_1a_case_12_1_4.json  cwebsocket_0_1a_case_12_1_5.html  cwebsocket_0_1a_case_12_1_5.json  cwebsocket_0_1a_case_12_1_6.html  cwebsocket_0_1a_case_12_1_6.json  cwebsocket_0_1a_case_12_1_7.html  cwebsocket_0_1a_case_12_1_7.json  cwebsocket_0_1a_case_12_1_8.html  cwebsocket_0_1a_case_12_1_8.json  cwebsocket_0_1a_case_12_1_9.html  cwebsocket_0_1a_case_12_1_9.json  cwebsocket_0_1a_case_12_2_1.html  cwebsocket_0_1a_case_12_2_1.json  (+1004 more)
test/emqx-scram-config/: README.md  emqx.conf  setup-scram.sh
test/mqtt/: mqtt-auth-test.c  mqtt-integration-test.c  mqtt-unit-test.c
test/security/: security_test_suite.c  standalone_security_tests.c
test/stomp/: docker-compose.yml  stomp-compliance-test.c  test-stomp.sh
