AUTOMAKE_OPTIONS = foreign subdir-objects
ACLOCAL_AMFLAGS = -I m4

# Pull in pkg-config detected flags from configure
AM_CPPFLAGS = $(ssl_CFLAGS) $(crypto_CFLAGS) $(pthread_CFLAGS)
AM_CFLAGS = $(AM_CPPFLAGS)
LDADD_COMMON = $(ssl_LIBS) $(crypto_LIBS) $(pthread_LIBS) -lpthread -lz

COMMON = src/cwebsocket/utf8.h src/cwebsocket/utf8.c src/cwebsocket/common.h src/cwebsocket/common.c
ECHO_CLIENT = src/cwebsocket/subprotocol/echo/echo_client.h src/cwebsocket/subprotocol/echo/echo_client.c
ECHO_SERVER = src/cwebsocket/subprotocol/echo/echo_server.h src/cwebsocket/subprotocol/echo/echo_server.c
WEBSOCKET_CLIENT = src/cwebsocket/client.h src/cwebsocket/client.c
WEBSOCKET_SERVER = src/cwebsocket/server.h src/cwebsocket/server.c

bin_PROGRAMS = websocket-client websocket-testsuite
websocket_client_SOURCES = $(ECHO_CLIENT) $(COMMON) $(WEBSOCKET_CLIENT) src/websocket-client.c
websocket_client_LDADD = $(LDADD_COMMON)
websocket_testsuite_SOURCES = $(COMMON) $(WEBSOCKET_CLIENT) src/websocket-testsuite.c
websocket_testsuite_LDADD = $(LDADD_COMMON)

noinst_PROGRAMS = tests-unit
tests_unit_SOURCES = $(COMMON) $(WEBSOCKET_CLIENT) src/tests-unit.c
tests_unit_CPPFLAGS = -DUNIT_TESTING $(AM_CPPFLAGS)
tests_unit_LDADD = $(LDADD_COMMON)

noinst_LIBRARIES = libwsclient.a
libwsclient_a_SOURCES = $(ECHO_CLIENT) $(COMMON) $(WEBSOCKET_CLIENT)

so:
	gcc -shared -fPIC $(ECHO_CLIENT) $(WEBSOCKET_CLIENT) -o libwsclient.so
	gcc -shared -fPIC $(ECHO_SERVER) $(WEBSOCKET_SERVER) -o libwsserver.so

# Files to remove with 'make clean' (build outputs, object files, etc.)
CLEANFILES = \
	libwsclient.so libwsserver.so \
	*.o src/*.o src/cwebsocket/*.o src/cwebsocket/subprotocol/echo/*.o \
	*~ src/*~ src/cwebsocket/*~ \
	vgcore.* \
	*.log integration*.log test*.log testsuite.log autoscan.log \
	*.gcda *.gcno src/*.gcda src/*.gcno src/cwebsocket/*.gcda src/cwebsocket/*.gcno \
	coverage.info coverage_filtered.info

# Files to remove with 'make distclean' (generated by configure)
DISTCLEANFILES = \
	config.h config.h.in config.h.in~ \
	config.cache config.log config.status \
	libtool stamp-h1 \
	Makefile Makefile.in

# Files to remove with 'make maintainerclean' (generated by autotools)
MAINTAINERCLEANFILES = \
	aclocal.m4 \
	compile config.guess config.sub \
	configure configure~ \
	depcomp install-sh missing ltmain.sh

# Additional cleanup hook to remove directories and test reports
clean-local:
	@echo "Removing build artifacts and dependency files..."
	rm -rf src/.deps src/.dirstamp
	rm -rf src/cwebsocket/.deps src/cwebsocket/.dirstamp
	rm -rf src/cwebsocket/subprotocol/echo/.deps src/cwebsocket/subprotocol/echo/.dirstamp
	rm -rf .deps/
	rm -rf Debug/ "RPI Debug" Release/
	@echo "Removing test reports..."
	rm -rf autobahn-reports/
	rm -rf test/autobahn/reports/clients/*
	@echo "Removing coverage reports..."
	rm -rf coverage_html/
	@echo "Clean complete"

# Full clean for git commit - removes ALL generated files including autotools
maintainer-clean-local:
	@echo "Removing all generated files for clean git repository..."
	rm -rf autom4te.cache/
	rm -rf m4/
	rm -f aclocal.m4
	rm -f compile config.guess config.sub
	rm -f configure configure~
	rm -f config.h.in config.h.in~
	rm -f depcomp install-sh missing ltmain.sh
	@echo "Maintainer clean complete - run ./autogen.sh to regenerate"

# Remove generated autotools files with 'make distclean'
distclean-local:
	rm -rf autom4te.cache/
	rm -rf m4/

.PHONY: autobahn-up autobahn-down autobahn-test-client autobahn-clean \
	docker-build docker-shell test integration-test inside-unit inside-integration docker-network \
	autobahn autobahn-local coverage coverage-report coverage-clean

autobahn-up:
	@./scripts/autobahn-up.sh

autobahn-down:
	@./scripts/autobahn-down.sh

autobahn-test-client: integration-test
	@true

autobahn-clean:
	@rm -rf test/autobahn/reports/clients/*

# Dockerized workflow (no host installs required)
IMAGE_NAME = cwebsocket/test:latest
REPORTS_WAIT_SECS ?= 900

docker-build:
	@DOCKER_BUILDKIT=0 docker build -t $(IMAGE_NAME) .

docker-shell: docker-build
	@docker run --rm -it -v $(PWD)/test/autobahn:/app/test/autobahn $(IMAGE_NAME) bash

# Host triggers that run tests inside the container
test: docker-build
	@docker run --rm -v $(PWD)/test/autobahn:/app/test/autobahn $(IMAGE_NAME) make inside-unit

docker-network:
	@docker network create cwsnet >/dev/null 2>&1 || true

integration-test: docker-build docker-network
			@docker rm -f cwebsocket-autobahn >/dev/null 2>&1 || true
			@rm -f test/autobahn/reports/clients/* >/dev/null 2>&1 || true
			@docker run -d --rm --name cwebsocket-autobahn --network cwsnet -v $(PWD)/test/autobahn:/config crossbario/autobahn-testsuite:latest >/dev/null
			@echo "Waiting for fuzzing server ..." && sleep 2
			@set -e; docker run --rm --network cwsnet -v $(PWD)/test/autobahn:/app/test/autobahn -e WS_FUZZING_SERVER=ws://cwebsocket-autobahn:9001 -e WS_CASECOUNT_RETRIES=120 $(IMAGE_NAME) bash -lc "./websocket-testsuite" || true; \
			echo -n "Waiting for reports"; \
			for i in `seq 1 $${REPORTS_WAIT_SECS}`; do \
			  [ -f $(PWD)/test/autobahn/reports/clients/index.json ] && break; \
			  sleep 1; \
			done; echo; \
			if [ -n "`ls -A $(PWD)/test/autobahn/reports/clients 2>/dev/null`" ]; then \
			  echo "Integration reports generated at test/autobahn/reports/clients"; \
			else \
			  echo "Integration failed: no reports generated."; \
			  exit 1; \
			fi
		@# copy full HTML+JSON reports directory to CWD
		@rm -rf $(PWD)/autobahn-reports && mkdir -p $(PWD)/autobahn-reports
		@cp -r $(PWD)/test/autobahn/reports/* $(PWD)/autobahn-reports/
		@echo "Full Autobahn reports copied to ./autobahn-reports (HTML and JSON)."
		@docker rm -f cwebsocket-autobahn >/dev/null 2>&1 || true

.PHONY: integration-logs
integration-logs:
	@docker logs -f cwebsocket-autobahn

# Simple alias to run full Dockerized Autobahn workflow
autobahn: integration-test

# Host-run testsuite against a running Autobahn server (default localhost)
autobahn-local: websocket-testsuite
	@echo "Running websocket-testsuite against $${WS_FUZZING_SERVER:-ws://localhost:9001} ..."
	@WS_FUZZING_SERVER=$${WS_FUZZING_SERVER:-ws://localhost:9001} WS_CASECOUNT_RETRIES=$${WS_CASECOUNT_RETRIES:-120} ./websocket-testsuite || true
	@# If reports were volume-mounted or written under test/autobahn/reports, copy them for convenience
	@mkdir -p autobahn-reports
	@if [ -d test/autobahn/reports ]; then \
	  rm -rf autobahn-reports/*; \
	  cp -r test/autobahn/reports/* autobahn-reports/ 2>/dev/null || true; \
	  echo "Copied reports to ./autobahn-reports (if available)."; \
	else \
	  echo "No local report directory found. Ensure your fuzzing server writes into test/autobahn/reports or use 'make autobahn'."; \
	fi

# In-container targets
inside-unit: tests-unit
	@./tests-unit

inside-integration:
	@echo "Use 'make integration-test' to run Autobahn in multi-container setup."

# Code Coverage Targets
coverage: coverage-clean
	@echo "Running code coverage analysis..."
	@./coverage.sh

coverage-report:
	@if [ -f coverage_html/index.html ]; then \
		echo "Opening coverage report..."; \
		xdg-open coverage_html/index.html 2>/dev/null || open coverage_html/index.html 2>/dev/null || echo "Please open coverage_html/index.html in your browser"; \
	else \
		echo "Coverage report not found. Run 'make coverage' first."; \
		exit 1; \
	fi

coverage-clean:
	@echo "Cleaning coverage data..."
	@find . -name "*.gcda" -delete 2>/dev/null || true
	@find . -name "*.gcno" -delete 2>/dev/null || true
	@rm -f coverage.info coverage_filtered.info 2>/dev/null || true
	@rm -rf coverage_html 2>/dev/null || true
	@echo "Coverage data cleaned."
