AUTOMAKE_OPTIONS = foreign subdir-objects
ACLOCAL_AMFLAGS = -I m4

# Pull in pkg-config detected flags from configure
AM_CPPFLAGS = $(ssl_CFLAGS) $(crypto_CFLAGS) $(pthread_CFLAGS)
AM_CFLAGS = $(AM_CPPFLAGS)
LDADD_COMMON = $(ssl_LIBS) $(crypto_LIBS) $(pthread_LIBS) -lpthread -lz

COMMON = src/cwebsocket/utf8.h src/cwebsocket/utf8.c src/cwebsocket/common.h src/cwebsocket/common.c
ECHO_CLIENT = src/cwebsocket/subprotocol/echo/echo_client.h src/cwebsocket/subprotocol/echo/echo_client.c
WEBSOCKET_CLIENT = src/cwebsocket/client.h src/cwebsocket/client.c

bin_PROGRAMS = websocket-client websocket-testsuite
websocket_client_SOURCES = $(ECHO_CLIENT) $(COMMON) $(WEBSOCKET_CLIENT) src/websocket-client.c
websocket_client_LDADD = $(LDADD_COMMON)
websocket_testsuite_SOURCES = $(COMMON) $(WEBSOCKET_CLIENT) src/websocket-testsuite.c
websocket_testsuite_LDADD = $(LDADD_COMMON)

noinst_PROGRAMS = tests-unit
tests_unit_SOURCES = $(COMMON) $(WEBSOCKET_CLIENT) src/tests-unit.c
tests_unit_CPPFLAGS = -DUNIT_TESTING $(AM_CPPFLAGS)
tests_unit_LDADD = $(LDADD_COMMON)

noinst_LIBRARIES = libwsclient.a
libwsclient_a_SOURCES = $(ECHO_CLIENT) $(COMMON) $(WEBSOCKET_CLIENT)

so:
	gcc -shared -fPIC $(ECHO_CLIENT) $(WEBSOCKET_CLIENT) -o libwsclient.so

# Files to remove with 'make clean' (build outputs, object files, etc.)
CLEANFILES = \
	libwsclient.so \
	*.o src/*.o src/cwebsocket/*.o src/cwebsocket/subprotocol/echo/*.o \
	*~ src/*~ src/cwebsocket/*~ \
	vgcore.* \
	*.log integration*.log test*.log testsuite.log autoscan.log \
	*.gcda *.gcno src/*.gcda src/*.gcno src/cwebsocket/*.gcda src/cwebsocket/*.gcno \
	valgrind-report.txt memcheck-report.txt helgrind-report.txt \
	cppcheck-report.txt clang-analyze-report.txt flawfinder-report.txt

# Files to remove with 'make distclean' (generated by configure)
DISTCLEANFILES = \
	config.h config.h.in config.h.in~ \
	config.cache config.log config.status \
	libtool stamp-h1 \
	Makefile Makefile.in

# Files to remove with 'make maintainerclean' (generated by autotools)
MAINTAINERCLEANFILES = \
	aclocal.m4 \
	compile config.guess config.sub \
	configure configure~ \
	depcomp install-sh missing ltmain.sh

# Additional cleanup hook to remove directories and test reports
clean-local:
	@echo "Removing build artifacts and dependency files..."
	rm -rf src/.deps src/.dirstamp
	rm -rf src/cwebsocket/.deps src/cwebsocket/.dirstamp
	rm -rf src/cwebsocket/subprotocol/echo/.deps src/cwebsocket/subprotocol/echo/.dirstamp
	rm -rf .deps/
	rm -rf Debug/ "RPI Debug" Release/
	@echo "Removing test reports..."
	rm -rf test/autobahn/reports/clients/*
	@echo "Removing QA reports..."
	rm -rf analysis-reports/
	@echo "Clean complete"

# Full clean for git commit - removes ALL generated files including autotools
maintainer-clean-local:
	@echo "Removing all generated files for clean git repository..."
	rm -rf autom4te.cache/
	rm -rf m4/
	rm -f aclocal.m4
	rm -f compile config.guess config.sub
	rm -f configure configure~
	rm -f config.h.in config.h.in~
	rm -f depcomp install-sh missing ltmain.sh
	@echo "Maintainer clean complete - run ./autogen.sh to regenerate"

# Remove generated autotools files with 'make distclean'
distclean-local:
	rm -rf autom4te.cache/
	rm -rf m4/

.PHONY: autobahn-up autobahn-down autobahn-test-client autobahn-clean \
	docker-build docker-shell test integration-test inside-unit inside-integration docker-network \
	autobahn autobahn-local \
	valgrind valgrind-full memcheck memcheck-full helgrind \
	static-analysis cppcheck clang-analyze scan-build \
	security-scan flawfinder security \
	qa quality-assurance \
	docker-qa docker-valgrind docker-memcheck docker-cppcheck docker-flawfinder \
	docker-clang-analyze docker-security

autobahn-up:
	@./scripts/autobahn-up.sh

autobahn-down:
	@./scripts/autobahn-down.sh

autobahn-test-client: integration-test
	@true

autobahn-clean:
	@rm -rf test/autobahn/reports/clients/*

# Dockerized workflow (no host installs required)
IMAGE_NAME = cwebsocket/test:latest
REPORTS_WAIT_SECS ?= 900

docker-build:
	@DOCKER_BUILDKIT=0 docker build -t $(IMAGE_NAME) .

docker-shell: docker-build
	@docker run --rm -it -v $(PWD)/test/autobahn:/app/test/autobahn $(IMAGE_NAME) bash

# Host triggers that run tests inside the container
test: docker-build
	@docker run --rm -v $(PWD)/test/autobahn:/app/test/autobahn $(IMAGE_NAME) make inside-unit

docker-network:
	@docker network create cwsnet >/dev/null 2>&1 || true

integration-test: docker-build docker-network
			@docker rm -f cwebsocket-autobahn >/dev/null 2>&1 || true
			@rm -f test/autobahn/reports/clients/* >/dev/null 2>&1 || true
			@docker run -d --rm --name cwebsocket-autobahn --network cwsnet -v $(PWD)/test/autobahn:/config crossbario/autobahn-testsuite:latest >/dev/null
			@echo "Waiting for fuzzing server ..." && sleep 2
			@set -e; docker run --rm --network cwsnet -v $(PWD)/test/autobahn:/app/test/autobahn -e WS_FUZZING_SERVER=ws://cwebsocket-autobahn:9001 -e WS_CASECOUNT_RETRIES=120 $(IMAGE_NAME) bash -lc "./websocket-testsuite" || true; \
			echo -n "Waiting for reports"; \
			for i in `seq 1 $${REPORTS_WAIT_SECS}`; do \
			  [ -f $(PWD)/test/autobahn/reports/clients/index.json ] && break; \
			  sleep 1; \
			done; echo; \
			if [ -n "`ls -A $(PWD)/test/autobahn/reports/clients 2>/dev/null`" ]; then \
			  echo "Integration reports generated at test/autobahn/reports/clients"; \
			else \
			  echo "Integration failed: no reports generated."; \
			  exit 1; \
			fi
		@# copy full HTML+JSON reports directory to CWD
		@rm -rf $(PWD)/autobahn-reports && mkdir -p $(PWD)/autobahn-reports
		@cp -r $(PWD)/test/autobahn/reports/* $(PWD)/autobahn-reports/
		@echo "Full Autobahn reports copied to ./autobahn-reports (HTML and JSON)."
		@docker rm -f cwebsocket-autobahn >/dev/null 2>&1 || true

.PHONY: integration-logs
integration-logs:
	@docker logs -f cwebsocket-autobahn

# Simple alias to run full Dockerized Autobahn workflow
autobahn: integration-test

# Host-run testsuite against a running Autobahn server (default localhost)
autobahn-local: websocket-testsuite
	@echo "Running websocket-testsuite against $${WS_FUZZING_SERVER:-ws://localhost:9001} ..."
	@WS_FUZZING_SERVER=$${WS_FUZZING_SERVER:-ws://localhost:9001} WS_CASECOUNT_RETRIES=$${WS_CASECOUNT_RETRIES:-120} ./websocket-testsuite || true
	@# If reports were volume-mounted or written under test/autobahn/reports, copy them for convenience
	@mkdir -p autobahn-reports
	@if [ -d test/autobahn/reports ]; then \
	  rm -rf autobahn-reports/*; \
	  cp -r test/autobahn/reports/* autobahn-reports/ 2>/dev/null || true; \
	  echo "Copied reports to ./autobahn-reports (if available)."; \
	else \
	  echo "No local report directory found. Ensure your fuzzing server writes into test/autobahn/reports or use 'make autobahn'."; \
	fi

# In-container targets
inside-unit: tests-unit
	@./tests-unit

inside-integration:
	@echo "Use 'make integration-test' to run Autobahn in multi-container setup."

# ============================================================================
# Valgrind - Memory Testing
# ============================================================================

valgrind: tests-unit
	@echo "Running Valgrind memory check (basic)..."
	@valgrind --leak-check=yes \
		--error-exitcode=1 \
		--track-origins=yes \
		--show-leak-kinds=definite,possible \
		./tests-unit

valgrind-full: tests-unit
	@echo "Running Valgrind memory check (comprehensive)..."
	@valgrind --leak-check=full \
		--show-leak-kinds=all \
		--track-origins=yes \
		--verbose \
		--error-exitcode=1 \
		--log-file=valgrind-report.txt \
		./tests-unit
	@echo "Report saved to: valgrind-report.txt"
	@grep -E "ERROR SUMMARY|definitely lost|indirectly lost|possibly lost" valgrind-report.txt || true

memcheck: tests-unit
	@echo "Running Valgrind memcheck..."
	@valgrind --tool=memcheck \
		--leak-check=full \
		--show-reachable=yes \
		--track-origins=yes \
		--error-exitcode=1 \
		./tests-unit

memcheck-full: tests-unit
	@echo "Running Valgrind memcheck (detailed)..."
	@valgrind --tool=memcheck \
		--leak-check=full \
		--show-leak-kinds=all \
		--track-origins=yes \
		--verbose \
		--log-file=memcheck-report.txt \
		./tests-unit
	@echo "Memcheck report saved to: memcheck-report.txt"

helgrind: tests-unit
	@echo "Running Valgrind helgrind (thread error detector)..."
	@valgrind --tool=helgrind \
		--log-file=helgrind-report.txt \
		./tests-unit
	@echo "Helgrind report saved to: helgrind-report.txt"

# ============================================================================
# Static Analysis
# ============================================================================

cppcheck:
	@echo "Running cppcheck static analysis..."
	@cppcheck --enable=all \
		--inconclusive \
		--std=c99 \
		--suppress=missingIncludeSystem \
		--quiet \
		--template=gcc \
		-I src/cwebsocket \
		src/cwebsocket/*.c src/*.c 2>&1 | tee cppcheck-report.txt
	@echo "Cppcheck report saved to: cppcheck-report.txt"

clang-analyze:
	@echo "Running clang static analyzer..."
	@scan-build -o analysis-reports \
		--status-bugs \
		-v \
		make clean all 2>&1 | tee clang-analyze-report.txt
	@echo "Clang analysis reports in: analysis-reports/"

scan-build: clang-analyze
	@true

static-analysis: cppcheck
	@echo ""
	@echo "Static analysis complete. Run 'make clang-analyze' for deeper analysis."

# ============================================================================
# Security Scanning
# ============================================================================

flawfinder:
	@echo "Running Flawfinder security scanner..."
	@flawfinder --quiet --dataonly --minlevel=1 \
		src/cwebsocket/*.c src/*.c 2>&1 | tee flawfinder-report.txt
	@echo ""
	@echo "Flawfinder report saved to: flawfinder-report.txt"
	@echo "Summary:"
	@grep "Hits = " flawfinder-report.txt || echo "No security issues found"

security-scan: flawfinder
	@echo ""
	@echo "Running additional security checks with cppcheck..."
	@cppcheck --enable=warning \
		--std=c99 \
		--suppress=missingIncludeSystem \
		-I src/cwebsocket \
		src/cwebsocket/*.c src/*.c 2>&1 | grep -E "(warning|error)" || echo "No warnings found"

security: security-scan
	@true

# ============================================================================
# Complete Quality Assurance Suite
# ============================================================================

qa: quality-assurance
	@true

quality-assurance:
	@echo "========================================"
	@echo "  cwebsocket Quality Assurance Suite"
	@echo "========================================"
	@echo ""
	@echo "[1/5] Building tests..."
	@make tests-unit > /dev/null 2>&1
	@echo "✓ Build successful"
	@echo ""
	@echo "[2/5] Running unit tests..."
	@./tests-unit > /dev/null 2>&1 && echo "✓ All tests passed" || echo "✗ Tests failed"
	@echo ""
	@echo "[3/5] Running Valgrind memory check..."
	@valgrind --leak-check=full --error-exitcode=0 --quiet ./tests-unit > /dev/null 2>&1 && echo "✓ No memory leaks detected" || echo "⚠ Memory issues detected (run 'make valgrind-full')"
	@echo ""
	@echo "[4/5] Running static analysis (cppcheck)..."
	@make cppcheck > /dev/null 2>&1 && echo "✓ Static analysis complete" || echo "⚠ Issues found"
	@echo ""
	@echo "[5/5] Running security scan (flawfinder)..."
	@make flawfinder > /dev/null 2>&1 && echo "✓ Security scan complete" || echo "⚠ Security issues found"
	@echo ""
	@echo "========================================"
	@echo "  Quality Assurance Summary"
	@echo "========================================"
	@echo "Reports generated:"
	@echo "  - valgrind-report.txt (if run)"
	@echo "  - cppcheck-report.txt"
	@echo "  - flawfinder-report.txt"
	@echo ""
	@echo "For detailed analysis, run:"
	@echo "  make valgrind-full    - Full memory analysis"
	@echo "  make clang-analyze    - Deep static analysis"
	@echo "  make security         - Security vulnerability scan"
	@echo ""

# ============================================================================
# Docker-based QA Targets (no host tools required)
# ============================================================================

docker-valgrind: docker-build
	@echo "Running Valgrind memory check (in Docker)..."
	@docker run --rm -v $(PWD):/host $(IMAGE_NAME) bash -c "\
		cd /app && \
		valgrind --leak-check=full \
		--show-leak-kinds=all \
		--track-origins=yes \
		--error-exitcode=1 \
		--log-file=/host/valgrind-report.txt \
		./tests-unit"
	@echo "✓ Valgrind report saved to: valgrind-report.txt"
	@grep -E "ERROR SUMMARY|definitely lost|indirectly lost|possibly lost" valgrind-report.txt || true

docker-memcheck: docker-build
	@echo "Running Valgrind memcheck (in Docker)..."
	@docker run --rm -v $(PWD):/host $(IMAGE_NAME) bash -c "\
		cd /app && \
		valgrind --tool=memcheck \
		--leak-check=full \
		--show-reachable=yes \
		--track-origins=yes \
		--log-file=/host/memcheck-report.txt \
		./tests-unit"
	@echo "✓ Memcheck report saved to: memcheck-report.txt"

docker-cppcheck: docker-build
	@echo "Running cppcheck static analysis (in Docker)..."
	@docker run --rm -v $(PWD):/host $(IMAGE_NAME) bash -c "\
		cd /app && \
		cppcheck --enable=all \
		--inconclusive \
		--std=c99 \
		--suppress=missingIncludeSystem \
		--quiet \
		--template=gcc \
		-I src/cwebsocket \
		src/cwebsocket/*.c src/*.c 2>&1 | tee /host/cppcheck-report.txt"
	@echo "✓ Cppcheck report saved to: cppcheck-report.txt"

docker-flawfinder: docker-build
	@echo "Running Flawfinder security scanner (in Docker)..."
	@docker run --rm -v $(PWD):/host $(IMAGE_NAME) bash -c "\
		cd /app && \
		flawfinder --quiet --dataonly --minlevel=1 \
		src/cwebsocket/*.c src/*.c 2>&1 | tee /host/flawfinder-report.txt"
	@echo "✓ Flawfinder report saved to: flawfinder-report.txt"
	@grep "Hits = " flawfinder-report.txt || echo "No security issues found"

docker-clang-analyze: docker-build
	@echo "Running clang static analyzer (in Docker)..."
	@docker run --rm -v $(PWD):/host $(IMAGE_NAME) bash -c "\
		cd /app && \
		scan-build -o /host/analysis-reports \
		--status-bugs \
		make clean all 2>&1 | tee /host/clang-analyze-report.txt || true"
	@echo "✓ Clang analysis reports in: analysis-reports/"

docker-security: docker-cppcheck docker-flawfinder
	@echo ""
	@echo "✓ Security analysis complete"

docker-qa: docker-build
	@echo "========================================"
	@echo "  Docker-based QA Suite"
	@echo "========================================"
	@echo ""
	@echo "[1/5] Running unit tests..."
	@docker run --rm $(IMAGE_NAME) bash -c "cd /app && ./tests-unit" > /dev/null 2>&1 && echo "✓ All tests passed" || echo "✗ Tests failed"
	@echo ""
	@echo "[2/5] Running Valgrind memory check..."
	@docker run --rm $(IMAGE_NAME) bash -c "cd /app && valgrind --leak-check=full --error-exitcode=0 --quiet ./tests-unit" > /dev/null 2>&1 \
		&& echo "✓ No memory leaks detected" || echo "⚠ Memory issues detected (run 'make docker-valgrind')"
	@echo ""
	@echo "[3/5] Running static analysis (cppcheck)..."
	@docker run --rm -v $(PWD):/host $(IMAGE_NAME) bash -c "\
		cd /app && \
		cppcheck --enable=all --std=c99 --suppress=missingIncludeSystem --quiet \
		-I src/cwebsocket src/cwebsocket/*.c src/*.c 2>&1 | tee /host/cppcheck-report.txt" > /dev/null 2>&1 \
		&& echo "✓ Static analysis complete" || echo "⚠ Issues found"
	@echo ""
	@echo "[4/5] Running security scan (flawfinder)..."
	@docker run --rm -v $(PWD):/host $(IMAGE_NAME) bash -c "\
		cd /app && \
		flawfinder --quiet --dataonly --minlevel=1 src/cwebsocket/*.c src/*.c 2>&1 | tee /host/flawfinder-report.txt" > /dev/null 2>&1 \
		&& echo "✓ Security scan complete" || echo "⚠ Security issues found"
	@echo ""
	@echo "[5/5] Running integration tests..."
	@$(MAKE) integration-test > /dev/null 2>&1 && echo "✓ Integration tests passed" || echo "⚠ Integration tests failed"
	@echo ""
	@echo "========================================"
	@echo "  QA Summary"
	@echo "========================================"
	@echo "Reports generated:"
	@echo "  - cppcheck-report.txt"
	@echo "  - flawfinder-report.txt"
	@echo ""
	@echo "For detailed analysis, run:"
	@echo "  make docker-valgrind       - Full memory analysis"
	@echo "  make docker-clang-analyze  - Deep static analysis"
	@echo ""
